2013-05-18  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Replace *_LIBRARY_NAME with *_OUTPUT_NAME
        https://bugs.webkit.org/show_bug.cgi?id=114554

        Reviewed by Gyuyoung Kim.

        Using variables as target names is very uncommon in CMake.
        The usual way to specify the name of the resulting binary
        is to set the OUTPUT_NAME target property.

        * CMakeLists.txt:

2013-05-18  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Move GTK port off legacy clipboard
        https://bugs.webkit.org/show_bug.cgi?id=116221

        Reviewed by Martin Robinson.

        Merge clipboard methods into PasteboardGtk that now wraps a
        DataObjectGtk.

        * GNUmakefile.list.am: Remove ClipboardGtk.h.
        * dom/Clipboard.h: Remove GTK from the list of ports using legacy
        clipboard.
        * page/gtk/EventHandlerGtk.cpp:
        (WebCore::EventHandler::createDraggingClipboard): Use
        Clipboard::createForDragAndDrop().
        * platform/Pasteboard.h:
        (Pasteboard):
        * platform/gtk/ClipboardGtk.cpp:
        (WebCore::Editor::newGeneralClipboard): Use
        Clipboard::createForCopyAndPaste().
        (WebCore::Clipboard::createDragImage):
        (WebCore::Clipboard::declareAndWriteDragImage):
        * platform/gtk/ClipboardGtk.h: Removed.
        * platform/gtk/DragDataGtk.cpp:
        * platform/gtk/PasteboardGtk.cpp:
        (WebCore::Pasteboard::create): Create a new Pasteboard for a given
        GtkClipboard or DataObjectGtk.
        (WebCore::Pasteboard::createForCopyAndPaste): Create a Pasteboard
        for the GDK_SELECTION_CLIPBOARD clipboard.
        (WebCore::Pasteboard::createPrivate): Create a Pasteboard without
        a GtkClipboard associated.
        (WebCore::Pasteboard::createForDragAndDrop): Create a Pasteboard
        for drag and drop operations.
        (WebCore::selectionClipboard): Return a static Pasteboard for the
        GDK_SELECTION_CLIPBOARD clipboard.